# Retail_Intelligence_Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.toml  main.py
app/config/: config_loader.py
app/data/: loader.py
app/examples/: api_requests.md
app/models/: engine.py  predictors.py  schema.py
app/routes/: api.py
app/services/: data_loader.py  feature_engineering.py  metrics.py  predictor.py  preprocess.py
app/tests/: test_api.py
app/utils/: cache.py  logger.py
